--- a/T-Shop.Client.MVC/Views/Order/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Order/Index.cshtml
@@ -24,7 +24,7 @@
                 <div class="col-md-12 col-lg-6 col-xl-5">
                     <div class="form-item">
                         <label class="form-label my-3">Full Name<sup>*</sup></label>
-                        <input type="text" class="form-control" value=@currentUser.Full_name disabled>
+                        <input type="text" class="form-control" value=@currentUser.FullName disabled>
                     </div>
                     <div class="form-item">
                         <label class="form-label my-3">Address <sup>*</sup></label>
