--- a/T-Shop.Client.MVC/Views/Product/_ProductListPartial.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/_ProductListPartial.cshtml
@@ -28,13 +28,14 @@
                         <img src=@product.Images.Find(i => i.isMain)?.imageUrl class="img-fluid w-100 rounded-top" alt="">
                     </div>
                     <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">@product.Model.Brand.Name</div>
-                    <div class="p-4 border border-secondary border-top-0 rounded-bottom">
+                    <div class="d-flex flex-column justify-content-between p-4 border border-secondary border-top-0 rounded-bottom" style="min-height: 230px">
                         <h4>@product.Name</h4>
-                        
-                        @if (ratingDetails != null)
-                        {
-                            <div class="d-flex">
-                                <p style="font-size: 23px; margin: 0 0 0 0; margin-right: 4px; color: #ffc73a">@product.Rating</p>
+                        <div>
+
+                            @if (ratingDetails != null)
+                            {
+                                <div class="d-flex">
+                                    <p style="font-size: 23px; margin: 0 0 0 0; margin-right: 4px; color: #ffc73a">@product.Rating</p>
                                     @foreach (var detail in ratingDetails)
                                     {
                                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="width: 30px; height: 30px">
@@ -55,14 +56,16 @@
                                     }
 
 
-                                <span class="align-content-center text-black-50" style="font-size: 12px; font-weight: 600; margin-left: 4px">@product.totalReviews Reviews</span>
-                            </div>
-                        }
+                                    <span class="align-content-center text-black-50" style="font-size: 12px; font-weight: 600; margin-left: 4px">@product.totalReviews Reviews</span>
+                                </div>
+                            }
 
-                        <div class="d-flex justify-content-between flex-column">
-                            <p class="fs-5 fw-bold mb-0 text-success mt-1 mb-2">@product.Price.ToString("N0") VND</p>
-                            <button data-product-id="@product.Id" class="btn border border-secondary rounded-pill px-3 text-primary add-to-cart-button"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</button>
+                            <div class="d-flex justify-content-between flex-column">
+                                <p class="fs-5 fw-bold mb-0 text-success mt-1 mb-2">@product.Price.ToString("N0") VND</p>
+                                <button data-product-id="@product.Id" class="btn border border-secondary rounded-pill px-3 text-primary add-to-cart-button"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</button>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </a>
