--- a/T-Shop.Client.MVC/Views/Product/_ProductReviewListPartial.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/_ProductReviewListPartial.cshtml
@@ -19,11 +19,11 @@
     @foreach(var review in Model.ProductReviews)
     {
         <div class="d-flex shadow rounded p-4" style="background-color: #f3f4f6; width: 100%">
-            <img src="https://cafebiz.cafebizcdn.vn/2018/6/16/h1xfzvz1nb-1506908574320-1529139802884198701797.png" class="img-fluid rounded-circle p-3" style="width: 100px; height: 100px;" alt="">
+            <img src="@review.User.Avatar" class="img-fluid rounded-circle p-3 " style="width: 100px; height: 100px;" alt="">
             <div class="flex-fill">
                 <p class="mb-2" style="font-size: 14px;">@review.CreatedAt</p>
                 <div class="d-flex justify-content-between">
-                    <h4 style="color:black">Jason Smith</h4>
+                    <h4 style="color:black">@review.User.FullName</h4>
                     <div class="d-flex mb-3">
                         @{
                             for(int i = 0; i < 5; i++)
@@ -48,7 +48,9 @@
                 <div class="d-flex gap-3 mb-4 rounded-md bg-light py-2 overflow-auto w-100" >
                     @foreach(var img in review.Images)
                     {
-                        <a href="@img.ImageUrl" class="border shadow-sm rounded-2 image-reviews" style="width: 20%;">
+                        var reviewGroup = "review-" + review.ID;
+
+                        <a href="@img.ImageUrl" class="border shadow-sm rounded-2 image-reviews" data-group="@reviewGroup" style="width: 20%;">
                             <img class="w-100 h-100 rounded-2"
                                  src=@img.ImageUrl
                                  alt="Review Image" />
@@ -125,19 +127,23 @@
 }
 
 <script>
-
-    //Handle pop up image when click (review)
     $(document).ready(function () {
-        $('.image-reviews').magnificPopup({
-            type: 'image',
-            gallery: {
-                enabled: true // Enable gallery for slideshow functionality
-            },
-            removalDelay: 300, // Delay removal of the popup to avoid flickering
-            mainClass: 'mfp-zoom-in', // Optional: Add a CSS class for zoom-in animation
-            navigateByImgClick: true, // Allow navigation by clicking on the image
-            preload: [0, 1] // Preload the current and next image for faster display
-            // Other options as needed (see Magnific Popup documentation)
+        // Select all review image links
+        $('.image-reviews').each(function () {
+            // Get the group identifier from the data attribute
+            var group = $(this).data('group');
+
+            // Initialize Magnific Popup for each group separately
+            $('[data-group="' + group + '"]').magnificPopup({
+                type: 'image',
+                gallery: {
+                    enabled: true
+                },
+                removalDelay: 300,
+                mainClass: 'mfp-zoom-in',
+                navigateByImgClick: true,
+                preload: [0, 1]
+            });
         });
     });
 </script>
